# cleaver2-cuda

./: .gitignore  README.md
src/: CMakeLists.txt
src/cli/mesher/: CMakeLists.txt  main.cpp  nrrd2cleaver.cpp  nrrd2cleaver.h  util.cpp  util.h
src/cli/mesher/TestData/: BlobbyField.cpp  PlaneField.h  SphereField.cpp  SphereField.h  SphereSizingField.cpp  SphereSizingField.h  SphereVaryingField.cpp  TorusField.h
src/gui/: CMakeLists.txt
src/gui/Application/: MainWindow.cpp  MainWindow.h
src/gui/Application/Data/: DataManager.cpp  DataManager.h
src/gui/Application/DataWidgets/: DataManagerWidget.cpp  FieldDataWidget.cpp  FieldDataWidget.h  MeshDataWidget.cpp  MeshDataWidget.h  MiniFieldWidget.cpp  MiniFieldWidget.h  VolumeDataWidget.cpp  VolumeDataWidget.h
src/gui/Application/ToolWidgets/: CleaverWidget.cpp  CleaverWidget.h  CleaverWidget.ui  SizingFieldWidget.cpp  SizingFieldWidget.h  SizingFieldWidget.ui  TestDataWidget.cpp  TestDataWidget.h  TransitionMeshTool.cpp  TransitionMeshTool.h  TransitionMeshTool.ui
src/gui/Application/ViewWidgets/: Camera.h  MeshViewOptionsWidget.cpp  MeshViewOptionsWidget.ui  MeshWindow.cpp  MeshWindow.h  TargetCamera.cpp  TargetCamera.h  TrackballCamera.cpp  TrackballCamera.h
src/gui/Main/: main.cpp
src/gui/TestData/: BlobbyField.h  PlaneField.cpp  PlaneSizingField.cpp  PlaneSizingField.h  SphereVaryingField.h  TorusField.cpp
src/gui/Util/: cleaver_cuda.cu  cleaver_cuda.hh  cleaver_utility.cpp  cleaver_utility.h  geometry.cpp  geometry.h  nrrd2cleaver.cpp  nrrd2cleaver.h
src/lib/cleaver/: AbstractField.h  AbstractScalarField.h  AbstractVolume.h  CMakeLists.txt  Cleaver.cpp  Cleaver.h  CleaverMesher.cpp  CleaverMesher.h  ConstantField.cpp  ConstantField.h  InverseField.cpp  InverseField.h  Matrix3x3.cpp  Matrix3x3.h  Octree.cpp  Octree.h  PaddedVolume.cpp  PaddedVolume.h  Plane.cpp  Plane.h  Roots3And4.cpp  ScalarField.cpp  ScalarField.h  ScaledField.cpp  ScaledField.h  SizingFieldCreator.cpp  SizingFieldCreator.h  SizingFieldOracle.cpp  SizingFieldOracle.h  TetMesh.cpp  TetMesh.h  Vertex.cpp  Vertex.h  Volume.cpp  Volume.h  vec3.cpp  vec3.h
